some accounts classes refactorings